# python-project-83

./: Makefile  README.md  database.sql  pyproject.toml  setup.cfg  test.sql
.github/workflows/: app.yml
page_analyzer/: app.py  db_manager.py  page_analyser.py  url.py
page_analyzer/templates/: individual_url.html  layout.html  main.html  urls_all.html
tests/: conftest.py  test_app.py  test_page_analyzer.py  test_url.py
tests/fixtures/: test_setup.sql  test_setup_create.sql  test_teardown.sql
