[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Troshchk <ktroshchenkova@ripe.net>"]
readme = "README.md"
packages = [
  { include = "page_analyzer" },
]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.3"
gunicorn = "^21.2.0"
flake8 = "^6.1.0"
pytest-cov = "^4.1.0"
psycopg2-binary = "^2.9.7"
validators = "^0.22.0"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
app = "page_analyzer.app:app"

