[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Troshchk <ktroshchenkova@ripe.net>"]
readme = "README.md"
packages = [
  { include = "page_analyzer" },
]

[tool.poetry.dependencies]
python = "^3.10,<4.0"
flask = "^2.3.3"
gunicorn = "^20.1.0"
flake8 = "^6.1.0"
pytest-cov = "^4.1.0"
psycopg2-binary = "^2.9.7"
validators = "^0.22.0"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
bs4 = "^0.0.1"
pytest-postgresql = "^5.0.0"
psycopg-binary = "^3.1.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
app = "page_analyzer.app:app"

